<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/app_a_void"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/avatarPlaceholder"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginStart="@dimen/padding_medium"
            android:contentDescription="@string/avatar_description"
            android:src="@drawable/avatar_placeholder"
            android:background="@color/navy_blue"
            android:padding="@dimen/padding_small"
            android:elevation="@dimen/elevation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appTitle" />

        <Button
            android:id="@+id/roundedButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/padding_medium"
            android:backgroundTint="@color/electric_blue"
            android:elevation="@dimen/elevation"
            android:padding="@dimen/padding_small"
            android:text="@string/rounded_button_text"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatarPlaceholder" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todoList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/roundedButton"
            app:layout_constraintBottom_toTopOf="@id/startStopContainer" />

        <LinearLayout
            android:id="@+id/startStopContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/padding_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <Button
                android:id="@+id/startButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:backgroundTint="@color/electric_blue"
                android:text="@string/start_button_text"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="@dimen/spacing_large"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/stop_button_text"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/charcoal_black" />
</androidx.drawerlayout.widget.DrawerLayout>
